@@ -1763,10 +1763,13 @@ see AHELP ZAPPERMASK, where allowed can ride, and disallowed is zapped.
 PROP_ROOMDARK=\
 Property   : Prop_RoomDark\n\r\
 Targets    : Areas, Room\n\r\
-Parameters : \n\r\
+Parameters : (HOURS=[NUM],[NUM],...)\n\r\
 Example    : \n\r\
+Example    : HOURS=1,4,0\n\r\
 Description: \n\r\
-Makes a room dark, so that you need a light to see it. 
+Makes a room dark, so that you need a light to see it. You can specify the hours of \
+the day in which the room is made dark using the optional HOURS \
+argument. 
 
 PROP_ROOMFORSALE=\
 Property   : Prop_RoomForSale\n\r\
@@ -1797,10 +1800,13 @@ their property.
 PROP_ROOMLIT=\
 Property   : Prop_RoomLit\n\r\
 Targets    : Areas, Room\n\r\
-Parameters : \n\r\
+Parameters : (HOURS=[NUM],[NUM],...)\n\r\
 Example    : \n\r\
+Example    : HOURS=1,4,0\n\r\
 Description: \n\r\
-Makes a room lit, even at night. 
+Makes a room lit, even at night.   You can specify the hours of \
+the day in which the room is made lit using the optional HOURS \
+argument.
 
 PROP_ROOMPLUSFORSALE=\
 Property   : Prop_RoomsPlusForSale\n\r\
