@@ -12,6 +12,7 @@
  11. New Scriptable triggers: CAST_PROG and CASTING_PROG
  12. New questmaker templates: normal_dispel1
  13. New achievement field: VISIBLEMASK
+ 14. Prop_RoomDark/Lit now support HOURS argument.
  
 # Build 5.9.9 Release 12/18/2019
   * Minor database change: CMQUESID in CMQUESTS, CMRCID in CMGRAC, CMPKEY in CMPDAT enlarged.  Mostly optional.
